feat: Implement a new human-readable, string-based UART communication protocol and increase sensor data update rate.

--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -4,10 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { workspace = true }
-postcard = { workspace = true }
-cobs = { workspace = true }
-crc = { workspace = true }
+heapless = "0.8"
 
 [features]
 default = []
