--- a/encoder-firmware/Cargo.toml
+++ b/encoder-firmware/Cargo.toml
@@ -86,9 +86,4 @@ embedded-sdmmc = "0.7.0"
 rotary-encoder-embedded = { version = "0.5.0" }
 encoder-protocol = { path = "../shared/" }
 
-# Protocol & CRC
-byteorder = { version = "1.5", default-features = false }
-crc = { version = "3.0", default-features = false }
-crc-catalog = "2.4"
-postcard = "1.0"
-cobs = { version = "0.4.0", default-features = false }
+# Protocol
