--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,3 +9,12 @@ heapless = "0.9.2"
 [features]
 default = []
 std = []
+
+[lints.rust]
+unsafe_code = "forbid"
+missing_debug_implementations = "warn"
+missing_copy_implementations = "warn"
+trivial_casts = "warn"
+trivial_numeric_casts = "warn"
+unused_import_braces = "warn"
+unused_qualifications = "warn"
