--- a/.github/workflows/hardware-ci.yml
+++ b/.github/workflows/hardware-ci.yml
@@ -7,6 +7,10 @@ on:
     branches: [ "main" ]
 
 jobs:
+  environment: rpi4
+  env:
+    CARGO_TERM_COLOR: always
+    PICO_ENCODER_UART: ${{ vars.PICO_ENCODER_UART }}
   build-uf2:
     runs-on: self-hosted
     
