--- a/encoder-client/Cargo.toml
+++ b/encoder-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "encoder-client"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2024"
 
 [lints.rust]
@@ -16,6 +16,15 @@ unused_qualifications = "warn"
 [dependencies]
 serialport = "4.3"
 thiserror = "2.0"
+tokio = { version = "1.49.0", features = [
+    "rt",
+    "rt-multi-thread",
+    "macros",
+    "sync",
+    "io-util",
+    "time",
+] }
+tokio-serial = "5.4.5"
 
 [dev-dependencies]
 dotenvy = "0.15"
